tests/baselines/reference/privateNameField.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(1,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(1,10): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(1,12): error TS2693: 'string' only refers to a type, but is being used as a value here.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(2,5): error TS2304: Cannot find name 'constructor'.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(2,21): error TS1005: ',' expected.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(2,23): error TS2693: 'string' only refers to a type, but is being used as a value here.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(2,31): error TS1005: ';' expected.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(3,9): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
tests/cases/conformance/classes/members/privateNames/privateNameField.ts(5,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/classes/members/privateNames/privateNameField.ts (9 errors) ====
        #name: string;
        ~~~~~
!!! error TS1128: Declaration or statement expected.
             ~
!!! error TS1128: Declaration or statement expected.
               ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
        constructor(name: string) {
        ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'constructor'.
                        ~
!!! error TS1005: ',' expected.
                          ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
                                  ~
!!! error TS1005: ';' expected.
            this.#name = name;
            ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.